# RAK4630-Amazon-Sidewalk-Example

./: .gitignore  CLAUDE.md  README.md  mfg.hex  pyproject.toml  west.yml
.claude/: settings.json
.claude/scripts/: guard-main.sh
.github/workflows/: ci.yml
ai/: brand-guidelines.md  sidecharge-story.html
ai/agents/: agents-orchestrator.md  design-brand-guardian.md  design-visual-storyteller.md  design-whimsy-injector.md  marketing-content-creator.md  project-manager-senior.md  testing-architect.md
ai/memory-bank/: j1772-telemetry-analysis-2026-02.md
app/rak4631_evse_monitor/: CMakeLists.txt  Kconfig  VERSION  app.ld  flash.sh  lora.conf  platform_api.ld  pm_static.yml  prj.conf  sample.yaml
app/rak4631_evse_monitor/app_evse/: CMakeLists.txt
app/rak4631_evse_monitor/boards/: rak4631_nrf52840.overlay
app/rak4631_evse_monitor/ext/: sid_demo_types.h
app/rak4631_evse_monitor/include/: app.h  app_leds.h  app_platform.h  app_rx.h  app_tx.h  charge_control.h  charge_now.h  cmd_auth.h  delay_window.h  diag_request.h  event_buffer.h  event_filter.h  evse_payload.h  evse_sensors.h  led_engine.h  mfg_health.h  ota_flash.h  ota_signing.h  ota_update.h  platform_api.h  rak_sidewalk.h  selftest.h  selftest_trigger.h  sidewalk.h  sidewalk_dispatch.h  thermostat_inputs.h  time_sync.h  tx_state.h
app/rak4631_evse_monitor/src/: app.c  app_leds.c  app_rx.c  app_tx.c  charge_control.c  evse_sensors.c  evse_shell.c  hvac_shell.c  main.c  mfg_health.c  ota_flash.c  ota_signing.c  ota_update.c  platform_api_impl.c  platform_shell.c  rak_sidewalk.c  sensor_monitor.c  sensor_monitor.h  sid_shell.c  sidewalk_dispatch.c  sidewalk_events.c  thermostat_inputs.c  tx_state.c
app/rak4631_evse_monitor/src/app_evse/: app_entry.c  app_platform.c  app_rx.c  app_tx.c  charge_control.c  charge_now.c  cmd_auth.c  delay_window.c  diag_request.c  event_buffer.c  event_filter.c  evse_payload.c  evse_sensors.c  led_engine.c  rak_sidewalk.c  selftest.c  selftest_trigger.c  thermostat_inputs.c  time_sync.c
app/rak4631_evse_monitor/tests/: Makefile  mock_boot.c  mock_platform.c  mock_platform.h  test_app  test_app.c  test_boot_path.c
app/rak4631_evse_monitor/tests/mock_include/: sidewalk.h  sidewalk_dispatch.h
app/rak4631_evse_monitor/tests/mock_include/zephyr/: kernel.h
app/rak4631_evse_monitor/tests/mock_include/zephyr/logging/: log.h
app/rak4631_evse_monitor/tests/test_app.dSYM/Contents/Resources/DWARF/: test_app
app/rak4631_rak1901_demo/: Kconfig
aws/: aggregation_lambda.py  charge_scheduler_lambda.py  cmd_auth.py  dashboard_api_lambda.py  decode_evse_lambda.py  device_registry.py  firmware.py  health_digest_lambda.py  migrate_tables.py  ota.py  ota_deploy.py  ota_sender_lambda.py  ota_signing.py  ota_status.py  protocol_constants.py  release.py  requirements-test.txt  seed_dashboard_data.py  serial_data_gen.py  sidewalk_utils.py
aws/dashboard/: index.html
aws/scripts/: moer_analysis.py
aws/terraform/: .gitignore  README.md  aggregation.tf  dashboard.tf  device_registry.tf  device_state.tf  main.tf  outputs.tf  variables.tf
aws/tests/: conftest.py  test_aggregation.py  test_aggregation_lambda.py  test_charge_scheduler.py  test_cmd_auth.py  test_dashboard_api.py  test_decode_evse.py  test_device_registry.py  test_health_digest.py  test_lambda_chain.py  test_ota_deploy_cli.py  test_ota_sender.py  test_ota_signing.py  test_time_sync.py
credentials.example/: device_profile.example.json  wireless_device.example.json
demo/ota_blink/: CMakeLists.txt  app_entry.c
docs/: PRD.html  PRD.md  architecture.md  data-retention.md  experiment-log.md  known-issues.md  lexicon.md  ota-recovery.md  privacy-governance.md  privacy-policy.md  project-plan.html  project-plan.md  provisioning.md  technical-design-rak-firmware.md  technical-design.md
docs/adr/: 001-version-mismatch-hard-stop.md  002-charge-now-cancels-demand-response.md  002-time-sync-second-resolution.md  003-charge-now-cancels-demand-response.md  004-event-buffer-state-changes.md  005-simulation-stays-in-evse-sensors.md  006-table-architecture.md  007-device-timestamp-as-sort-key.md  008-uplink-deduplication.md  009-tou-schedule-storage.md  010-sidewalk-module-selection.md  README.md
docs/decisions/: product-decisions.md
docs/design/: brand-whimsy.md  commissioning-card-spec.md  device-registry-architecture.md  sidecharge-brand-book-variant-a-optimist.html  sidecharge-brand-book-variant-b-editorial.html  sidecharge-brand-book.html  telemetry-pipeline-architecture.md  utility-identification-scope.md
docs/experiments/: EXP-001-windowed-blast-ota.md  EXP-002-ota-chunk-size.md  EXP-003-ota-stale-threshold.md  EXP-004-delta-ota.md  EXP-005-on-change-sensing.md  EXP-006-raw-payload.md  EXP-007-split-image-architecture.md  EXP-008-generic-platform.md  EXP-009-clang-format-ci.md  EXP-009b-board2-pot-overcurrent.md  EXP-010-rak19001-pin-mapping.md  EXP-011-dashboard-data-generation.md  EXP-012-ain1-recovery-connector.md  EXP-013-j1772-telemetry-analysis.md  README.md  REC-001-heartbeat-interval.md  (+10 more)
drivers/: CMakeLists.txt  Kconfig
scripts/: serial_cmd.py
tests/: CMakeLists.txt
tests/app/: test_app.c  test_app_rx.c  test_app_tx.c  test_charge_control.c  test_event_buffer.c  test_evse_sensors.c  test_mfg_health.c  test_ota_chunks.c  test_ota_recovery.c  test_ota_signing.c  test_selftest_trigger.c  test_shell_commands.c  test_thermostat_inputs.c  test_time_sync.c
tests/e2e/: RESULTS-2026-02-11.md  RESULTS-selftest.md  RESULTS-task046-signed-ota.md  RESULTS-task047-time-sync-v08.md  RESULTS-task058-shell-smoke.md  RESULTS-task072-button-gpio.md  RESULTS-task075-delay-window.md  RUNBOOK.md
tests/integration/: conftest.py  test_shell.py
tests/mocks/: app_ble_config.h  app_subGHz_config.h  mock_flash.c  mock_ota_signing.c  mock_platform_api.c  mock_platform_api.h  sid_pal_mfg_store_ifc.h
tests/mocks/sidewalk_dfu/: nordic_dfu.h
tests/mocks/zephyr/: device.h  kernel.h
tests/mocks/zephyr/drivers/: flash.h
tests/mocks/zephyr/logging/: log.h  log_ctrl.h
tests/mocks/zephyr/sys/: crc.h  reboot.h
tools/: ota_delta_prep.py
(+186 files in other folders)
